--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@500&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@500&family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@500&family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&family=Merriweather&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
 
 :root{
   --navlink_color:rgb(255, 254, 254);
@@ -11,6 +12,7 @@
 *{
   margin: 0;
   padding: 0;
+  scroll-behavior: smooth;
 }
 
 @media (max-width:1440px) {
@@ -267,7 +269,7 @@
       display: flex;
       justify-content: center;
       margin-top: 5%;
-      visibility: hidden;
+
     }
 
     .container_about_me{
@@ -277,7 +279,7 @@
       margin-top: 4%;
       gap: 20px;
       perspective: 1000px;
-      visibility: hidden;
+
     }
 
     .about_me{
@@ -286,32 +288,72 @@
       height: 100%;
       display: flex;
       flex-direction: row;
-      background-color: aqua;
-      transform-style: preserve-3d;
+      justify-content: space-between;
     }
 
-    .about_me:hover{
-      transform:rotateY(180deg);
-      transition: all 0.3s ease;
+    .card-1,.card-2,.card-3,.card-4{
+      margin-left: 4%;
+      overflow: hidden;
+      border-radius: 10px;
+      transition: 0.5s ease-in;
     }
 
-    .front_card-1,.front_card-2,.front_card-3,.front_card-4{
-      flex:25%;
-      margin-left: 10%;
-      width:100%;
-      height:90%;
-      backface-visibility: hidden;
+    .card-1:hover,.card-2:hover,.card-3:hover,.card-4:hover{
+      cursor: pointer;
+    }
+
+    .card-1:hover .text-1 ,.card-2:hover .text-2,.card-3:hover .text-3,.card-4:hover .text-4{
+      visibility: visible;
+      height: 200px;
+    }
+
+    .card-1:hover p,.card-2:hover p,.card-3:hover p,.card-4:hover p{
+      visibility: visible;
+    }
+    
+    svg{
+      border-bottom-right-radius: 10px;
+      border-bottom-left-radius: 10px;
+      box-shadow: 10px 10px 5px #aaaaaa;
+      transition: 0.5s ease-in;
+      width: 300px;
+      height: 350px;
+    }
+
+    svg:hover{
+      box-shadow: 10px 10px 5px #aaaaaa inset;
+    }
+
+    .text-1,.text-2,.text-3,.text-4{
+      box-sizing: border-box;
       position: absolute;
-      background-color: aliceblue;
+      width:300px;
+      height:100px;
+      margin-bottom: 5%;
+      background-color:rgb(0, 0, 0,50%);
+      color: white;
+      bottom: 28px;
+      border-bottom-right-radius: 10px;
+      border-bottom-left-radius: 10px;
+      font-family: "Merriweather", serif;
+      font-weight: 400;
+      font-style: normal;
+      transition: 0.3s ease-out;
     }
 
-    .back_card-1,.back_card-2,.back_card-3,.back_card-4{
-      backface-visibility: hidden;
-      transform:rotateY(180deg);
-      position: absolute;
-      background-color: aquamarine;
-      width:100%;
+    .card-1 p,.card-2 p,.card-3 p,.card-4 p{
+      visibility: hidden;
     }
+
+
+    .title{
+      margin:30px;
+    }
+
+    .content{
+      margin: 10px;
+    }
+    
 
     .button{
       border-radius: 5px;
@@ -336,51 +378,80 @@
       transform: scale(0.6);
     }
 
-    #projects h1{
+    #projects{
+      width: 100%;
+    }
+
+    
+    .all-cards{
       display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      width: 100%;
+    }
+
+    .project-1,.project-2,.project-3,.project-4{
+      width:300px;
+      height: 450px;
+    }
+
+    .project-card-1,.project-card-2,.project-card-3,.project-card-4{
+      display: flex;
+      flex-direction: column;
       justify-content: center;
-      font-size: 50px;
-      text-transform: uppercase;
-      margin-top: 3%;
+      align-items: center;
+      background: linear-gradient(rgb(121, 66, 232),rgb(131, 75, 243),rgb(200, 160, 255));
+      border-radius:10px ;
+      box-shadow: 5px 5px 20px;
     }
 
-    .recent{
-      font-size: 35px;
-      margin-top: 30%;
-      margin-left:3%;
-      text-transform: uppercase;
-      font-family: "Edu AU VIC WA NT Hand", cursive;
-      font-optical-sizing: auto;
-      font-weight: 400px;
-      font-style: normal;
-      display: inline;
-
+    .project-card-1-part-2,.project-card-2-part-2,.project-card-3-part-2,.project-card-4-part-2{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 20px 0px 10px 0px;
     }
 
-    .github{
-      color: white;
-      background-color: rgb(35, 218, 251);
-      padding: 10px 10px 10px 10px;
-      text-decoration: none;
-      border: none;
-      border-radius: 10px;
-      transition: 0.3s ease-in;
-    }
-
-    .github:hover{
-      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-      color: rgb(35, 218, 251);
+    .project-button button{
+      margin-top:15%;
+      font-size: 20px;
+      padding: 5px 10px 5px 10px;
       background-color:white;
+      color: rgb(122, 163, 247);;
+      border-radius: 10px;
+      border:1px solid rgb(122, 163, 247);
+      transition: 0.3s ease;
     }
 
-    .github_link{
-      text-transform: uppercase;
-      font-size: 30px;
-      text-decoration: none;
-      border: none;
+    .project-button button:hover{
+      background-color: rgb(122, 163, 247);
       color: white;
-      background-color: rgb(0, 0, 0);
-      margin-left: 5%;
+    }
+
+    .project-title{
+      font-size: 25px;
+      color: white;
+      padding: 20px 0px 20px 0px;
+    }
+
+    .model{
+      height: 100vh;
+      width: 100vw;
+      position: fixed;
+      z-index: 50;
+      top: 0;
+      right: 0;
+      background: rgba(155, 154, 154, 0.603);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      left:0%;
+    }
+
+    .model-project-1{
+      width:300px;
+      height: 450px;
     }
 }
 
@@ -522,6 +593,74 @@
     position: absolute;
     display: inline-block;
   }
+  
+  
+
+  .about_me{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+
+  .card-1,.card-2,.card-3,.card-4{
+    overflow: hidden;
+    border-radius: 10px;
+    transition: 0.5s ease-out;
+  }
+
+  .card-1:hover,.card-2:hover,.card-3:hover,.card-4:hover{
+    cursor: pointer;
+  }
+
+  .card-1:hover .text-1 ,.card-2:hover .text-2,.card-3:hover .text-3,.card-4:hover .text-4{
+    visibility: visible;
+    height: 200px;
+  }
+
+  .card-1:hover p,.card-2:hover p,.card-3:hover p,.card-4:hover p{
+    visibility: visible;
+  }
+  
+  svg{
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    box-shadow: 10px 10px 5px #aaaaaa;
+    transition: 0.5s ease-in;
+    width: 250px;
+    height: 350px;
+  }
+
+  svg:hover{
+    box-shadow: 10px 10px 5px #aaaaaa inset;
+  }
+
+  .text-1,.text-2,.text-3,.text-4{
+    box-sizing: border-box;
+    position: absolute;
+    width:250px;
+    height:100px;
+    margin-bottom: 5%;
+    background-color:rgb(0, 0, 0,50%);
+    color: white;
+    bottom: 28px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    font-family: "Merriweather", serif;
+    font-weight: 400;
+    font-style: normal;
+    transition: 0.3s ease-out;
+  }
+
+  .card-1 p,.card-2 p,.card-3 p,.card-4 p{
+    visibility: hidden;
+  }
+
+  .title{
+    margin: 20px;
+  }
 }
 
 
@@ -613,7 +752,132 @@
     color: aqua;
     visibility: visible;
   }
+
+  .about_me{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .card-1,.card-2,.card-3,.card-4{
+    overflow: hidden;
+    border-radius: 10px;
+    transition: 0.5s ease-out;
+  }
+
+  .card-1:hover,.card-2:hover,.card-3:hover,.card-4:hover{
+    cursor: pointer;
+  }
+
+  .card-1:hover .text-1 ,.card-2:hover .text-2,.card-3:hover .text-3,.card-4:hover .text-4{
+    visibility: visible;
+    height: 200px;
+  }
+
+  .card-1:hover p,.card-2:hover p,.card-3:hover p,.card-4:hover p{
+    visibility: visible;
+  }
+  
+  svg{
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    box-shadow: 10px 10px 5px #aaaaaa;
+    transition: 0.5s ease-in;
+    width: 200px;
+    height: 370px;
+  }
+
+  svg:hover{
+    box-shadow: 10px 10px 5px #aaaaaa inset;
+  }
+
+  .text-1,.text-2,.text-3,.text-4{
+    box-sizing: border-box;
+    position: absolute;
+    width:200px;
+    height:90px;
+    margin-bottom: 5%;
+    background-color:rgb(0, 0, 0,50%);
+    color: white;
+    bottom: 28px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    font-family: "Merriweather", serif;
+    font-weight: 300;
+    font-style: normal;
+    transition: 0.3s ease-out;
+  }
+
+  .card-1 p,.card-2 p,.card-3 p,.card-4 p{
+    visibility: hidden;
+  }
+
+  .title{
+    margin: 10px;
+    font-size: 35px;
+    display: flex;
+    justify-content: center;
+    text-transform: uppercase;
+  }
+
+  .all-cards{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+
+  .project-1,.project-2,.project-3,.project-4{
+    width:200px;
+    height: 250px;
+  }
+
+  .project-card-1,.project-card-2,.project-card-3,.project-card-4{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(rgb(121, 66, 232),rgb(131, 75, 243),rgb(200, 160, 255));
+    border-radius:10px ;
+    box-shadow: 5px 5px 20px;
+    width:200px;
+  }
+
+  .project-card-1-part-2,.project-card-2-part-2,.project-card-3-part-2,.project-card-4-part-2{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 0px 10px 0px;
+    width:200px;
+  }
+
+  .project-button button{
+    margin-top:15%;
+    font-size: 18px;
+    padding: 5px 8px 5px 8px;
+    background-color:white;
+    color: rgb(122, 163, 247);;
+    border-radius: 10px;
+    border:1px solid rgb(122, 163, 247);
+    transition: 0.3s ease;
+  }
+
+  .project-button button:hover{
+    background-color: rgb(122, 163, 247);
+    color: white;
+  }
+
+  .project-title{
+    font-size: 18px;
+    color: white;
+    padding: 20px 0px 20px 0px;
+  }
 }
+
+
 
 @media(max-width:938px){
   .nav-links{
@@ -756,6 +1020,125 @@
     display: inline-block;
   }
 
+  .about_me{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .card-1,.card-2,.card-3,.card-4{
+    overflow: hidden;
+    border-radius: 10px;
+    transition: 0.5s ease-out;
+  }
+
+  .card-1:hover,.card-2:hover,.card-3:hover,.card-4:hover{
+    cursor: pointer;
+  }
+
+  .card-1:hover .text-1 ,.card-2:hover .text-2,.card-3:hover .text-3,.card-4:hover .text-4{
+    visibility: visible;
+    height: 250px;
+  }
+
+  .card-1:hover p,.card-2:hover p,.card-3:hover p,.card-4:hover p{
+    visibility: visible;
+  }
+  
+  svg{
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    box-shadow: 10px 10px 5px #aaaaaa;
+    transition: 0.5s ease-in;
+    width: 150px;
+    height: 370px;
+  }
+
+  svg:hover{
+    box-shadow: 10px 10px 5px #aaaaaa inset;
+  }
+
+  .text-1,.text-2,.text-3,.text-4{
+    box-sizing: border-box;
+    position: absolute;
+    width:150px;
+    height:80px;
+    margin-bottom: 5%;
+    background-color:rgb(0, 0, 0,50%);
+    color: white;
+    bottom: 28px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    font-family: "Merriweather", serif;
+    font-weight: 300;
+    font-style: normal;
+    transition: 0.3s ease-out;
+  }
+
+  .card-1 p,.card-2 p,.card-3 p,.card-4 p{
+    visibility: hidden;
+  }
+
+  .title{
+    margin: 10px;
+    font-size: 20px;
+  }
+
+  .all-cards{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .project-1,.project-2,.project-3,.project-4{
+    width:300px;
+    height: 350px;
+  }
+
+  .project-card-1,.project-card-2,.project-card-3,.project-card-4{
+    display: flex;
+    flex-direction: column;
+    background: linear-gradient(rgb(121, 66, 232),rgb(131, 75, 243),rgb(200, 160, 255));
+    border-radius:10px ;
+    box-shadow: 5px 5px 20px;
+    width:300px;
+    margin-top: 7%;
+  }
+
+  .project-card-1-part-2,.project-card-2-part-2,.project-card-3-part-2,.project-card-4-part-2{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 5px 30px 5px;
+    width:200px;
+  }
+
+  .project-button button{
+    margin-top:20%;
+    font-size: 18px;
+    padding: 5px 8px 5px 8px;
+    background-color:white;
+    color: rgb(122, 163, 247);;
+    border-radius: 10px;
+    border:1px solid rgb(122, 163, 247);
+    transition: 0.3s ease;
+  }
+
+  .project-button button:hover{
+    background-color: rgb(122, 163, 247);
+    color: white;
+  }
+
+  .project-title{
+    font-size: 25px;
+    color: white;
+    padding: 20px 0px 20px 0px;
+  }
+
 }
 
 @media(max-width:736px){
@@ -846,6 +1229,142 @@
     color: aqua;
     visibility: visible;
   }
+
+  .about_me{
+    position: absolute;
+    width: 100%;
+    min-height:2000px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .card-1,.card-2,.card-3,.card-4{
+    overflow: hidden;
+    border-radius: 10px;
+    transition: 0.5s ease-out;
+    margin-left: 30%;
+    margin-top:5% ;
+    margin-bottom: 2%;
+  }
+
+  .card-1:hover,.card-2:hover,.card-3:hover,.card-4:hover{
+    cursor: pointer;
+  }
+
+  .card-4:hover .text-4{
+    visibility: visible;
+    height: 250px;
+  }
+
+  .card-1:hover .text-1 {
+    transform: translateY(-70%);
+  }
+
+  .card-2:hover .text-2{
+    transform: translateY(-70%);
+  }
+
+  .card-3:hover .text-3{
+    transform: translateY(-70%);
+  }
+
+  .card-1:hover p,.card-2:hover p,.card-3:hover p,.card-4:hover p{
+    visibility: visible;
+  }
+  
+  svg{
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    box-shadow: 10px 10px 5px #aaaaaa;
+    transition: 0.5s ease-in;
+    width: 300px;
+    height: 370px;
+  }
+
+  svg:hover{
+    box-shadow: 10px 10px 5px #aaaaaa inset;
+  }
+
+  .text-1,.text-2,.text-3,.text-4{
+    box-sizing: border-box;
+    position: absolute;
+    width:300px;
+    height:80px;
+    background-color:rgb(0, 0, 0,50%);
+    color: white;
+    bottom: -8px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    font-family: "Merriweather", serif;
+    font-weight: 300;
+    font-style: normal;
+    transition: 0.3s ease-out;
+  }
+
+  .text-1{
+    top:330px;
+  }
+
+  .text-2{
+    top:850px;
+  }
+
+  .text-3{
+    top:1375px;
+  }
+
+  .card-1 p,.card-2 p,.card-3 p,.card-4 p{
+    visibility: hidden;
+  }
+
+  .title{
+    margin: 30px;
+    font-size: 30px;
+  }
+
+  #projects{
+    position: absolute;
+    top:400%;
+  }
+
+
+  .recent{
+    font-size: 20px;
+    margin-left:3%;
+    text-transform: uppercase;
+    font-family: "Edu AU VIC WA NT Hand", cursive;
+    font-optical-sizing: auto;
+    font-weight: 400px;
+    font-style: normal;
+    display: inline;
+  }
+
+  .github{
+    color: white;
+    background-color: rgb(35, 218, 251);
+    padding: 10px 10px 10px 10px;
+    text-decoration: none;
+    border: none;
+    border-radius: 10px;
+    transition: 0.3s ease-in;
+  }
+
+  .github:hover{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    color: rgb(35, 218, 251);
+    background-color:white;
+  }
+
+  .github_link{
+    text-transform: uppercase;
+    font-size: 20px;
+    text-decoration: none;
+    border: none;
+    color: white;
+    background-color: rgb(0, 0, 0);
+    margin-left: 5%;
+  }
+
 }
 
 @media(max-width:640px){
@@ -1039,5 +1558,18 @@
     opacity: 1;
     color: aqua;
     visibility: visible;
+  }
+
+  #projects{
+    position: absolute;
+    top:380%;
+  }
+
+  #projects h1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    text-transform: uppercase;
   }
 }
