--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,6 @@
 @media (max-width:1440px) {
     .complete{
       width:100%;
-      min-width:1440px;
       height: 700px;
       object-fit: fill;
       margin: none;
@@ -41,8 +40,7 @@
       display: flex;
       flex-direction: row;
       width:100%;
-      min-width: 1440px;
-      padding: 30px 30px 30px 30px;
+      padding: 30px 30px 0px 30px;
       z-index: 10;
       transition: 0.5s ease-in;
     }
@@ -630,11 +628,11 @@
     height:75px;
     position: relative;
     top:-50%;
-    left:70%;
+    margin-right: 10%;
     cursor: pointer;
     z-index: 2;
     display: flex;
-    float: left;
+    float: right;
   }
   
   span{
@@ -867,11 +865,10 @@
     height:75px;
     position: relative;
     top:-50%;
-    left:50%;
     cursor: pointer;
     z-index: 2;
     display: flex;
-    float: left;
+    float: right;
   }
   
   span{
@@ -909,7 +906,6 @@
     height:75px;
     position: relative;
     top:-50%;
-    left:30%;
     cursor: pointer;
     z-index: 4;
   }
@@ -1115,7 +1111,6 @@
     height:75px;
     position: relative;
     top:-50%;
-    left:10%;
     cursor: pointer;
     z-index: 4;
   }
@@ -1164,11 +1159,11 @@
   }
 
   .hamburger-menu{
-    width: 75px;
-    height:75px;
+    width: 70px;
+    height:70px;
     position: relative;
-    top:-50%;
-    left:-10%;
+    top:-45%;
+    margin-right: 13%;
     cursor: pointer;
     z-index: 2;
   }
@@ -1324,6 +1319,13 @@
   }
 }
 
+@media(max-width:830px){
+  .my-portifolio{
+    font-size: 30px;
+    flex: 70%;
+  }
+}
+
 @media(max-width:800px){
   #intro{
     display: flex;
@@ -1445,11 +1447,11 @@
   }
 
   .hamburger-menu{
-    width: 75px;
-    height:75px;
+    width: 60px;
+    height:60px;
     position: relative;
     top:-35%;
-    left:-25%;
+    margin-right: 20%;
     cursor: pointer;
     z-index: 2;
   }
@@ -1670,15 +1672,14 @@
   }
 
   .my-portifolio{
-    font-size: 30px;
+    font-size: 28px;
   }
 
   .hamburger-menu{
     width: 60px;
     height:60px;
     position: relative;
-    top:-45%;
-    left:-45%;
+    top:-35%;
     cursor: pointer;
     z-index: 2;
 
@@ -1756,9 +1757,49 @@
     color: aqua;
     visibility: visible;
   }
+
+  .container_about_me{
+    margin-top: 0%;
+  }
+
+  .text-1{
+    top:440px;
+  }
+
+  .text-2 {
+    top: 880px;
+  }
+
+  .text-3 {
+    top: 1325px;
+  }
+
+  .text-4{
+    bottom: 125px;
+  }
+
 }
 
 @media(max-width:568px){
+  #intro {
+    display: flex;
+    flex-direction: column;
+    top: 15%;
+    justify-content: center;
+    align-items: center;
+    margin-top: 5%;
+  }
+
+  .my_intro{
+    margin-top: 5%;
+  }
+  
+  .my_profile {
+    flex: none;
+    width: 250px;
+    height: 250px;
+  }
+  
   .nav-links{
     visibility: hidden;
   }
@@ -1768,17 +1809,17 @@
   }
 
   .my-portifolio{
-    font-size: 30px;
+    font-size: 20px;
   }
 
   .hamburger-menu{
-    width: 65px;
-    height:65px;
+    width: 50px;
+    height:50px;
     position: relative;
     top:-50%;
-    left:-50%;
     cursor: pointer;
     z-index: 2;
+    margin-right: 30%;
   }
 
   span{
@@ -1863,11 +1904,6 @@
     text-transform: uppercase;
   }
 
-  .my_profile{
-    width: 200px;
-    height: 200px;
-    margin-top: 10%;
-  }
 
   .text-3{
     top:1320px;
@@ -1893,11 +1929,31 @@
   .down-nav-link-1, .down-nav-link-2, .down-nav-link-3{
     font-size: 15px;
   }
+
+  .about_me_title{
+    margin-top: 15%;
+  }
+
+
 }
 
 @media(max-width:496px){
+  
+  #intro{
+    margin-top: 0%;
+  }
+
   .my-portifolio{
-    font-size: 25px;
+    font-size: 21px;
+  }
+
+  span{
+    height: 4px;
+  }
+ 
+  .hamburger-menu {
+    width: 40px;
+    height: 40px;
   }
 
   .my_intro h1{
@@ -1914,8 +1970,8 @@
 
   .my_profile{
     margin-top: 0%;
-    width: 180px;
-    height: 180px;
+    width: 200px;
+    height: 200px;
   }
 
   .complete{
@@ -1935,9 +1991,12 @@
     max-width: 1450px;
   }
 
-  .intro, .about, .projects{
-    margin-top: 10%;
-    flex: none;
+  .text-4{
+    bottom: 11px;
+  }
+
+  .text-3{
+    top: 1390px;
   }
 
   .text-2 {
@@ -1945,13 +2004,31 @@
   }
 
   .text-1 {
-    top: 460px;
+    top: 390px;
   }
 
+  .hamburger-menu{
+    margin-right: 40%;
+  }
+
+  .card-1, .card-2, .card-3, .card-4 {
+    margin-top: 30%;
+  }
   
+  .about_me_title {
+    font-size: 60px;
+  }
 }
 
-@media(max-width:454px){
+@media(max-width:460px){
+  .hamburger-menu{
+    top:-45%;
+    margin-right: 50%;
+    
+  }
+}
+
+@media (max-width:454px){
   .info_about_me {
     font-size: 5px;
     margin-top: 7%;
@@ -1963,24 +2040,25 @@
 
   .icons .fa {
     height: 3px;
-    font-size: 30px;
+    font-size: 25px;
+    margin-left: 10%;
   }
 
   .hamburger-menu{
-    left:-55%;
+    top:-45%;
+    margin-right: 30%;
   }
 
   #intro{
-    top:20%;
+    top:15%;
   }
 
   .off-screen-menu{
     max-width: 1450px;
   }
 
-  .intro, .about, .projects{
-    margin-top: 10%;
-    flex: none;
+  .my-portifolio {
+    font-size: 18px;
   }
 
   .text-1 {
@@ -1992,44 +2070,119 @@
   }
 
   .text-4 {
-    bottom: 160px;
+    bottom: 10px;
+  }
+
+  #intro {
+    margin-top: 10%;
+  }
+
+}
+
+@media(max-width:424px) {
+  .hamburger-menu {
+    width: 30px;
+    height: 30px;
+    top: -50%;
+    margin-right: 30%;
+  }
+
+  .my_intro{
+    margin-left: 15%;
+    margin-right: 5%;
+  }
+
+  .my_intro h3 {
+    font-size: 25px;
+  }
+  .my_intro h1 {
+    font-size: 18px;
+  }
+
+  .my_intro p {
+    font-size: 18px;
+  }
+
+  .my-portifolio {
+    font-size: 17px;
+  }
+
+  span {
+    height: 3px;
+  }
+
+  .about_me_title {
+    font-size: 50px;
+  }
+
+  .text-1{
+    top: 400px;
   }
 }
 
-@media(max-width:453px) {
-  .hamburger-menu {
-    width: 45px;
-    height: 40px;
-    top: -55%;
-    left:-57%;
+
+@media(max-width:410px){
+  .my-portifolio {
+    font-size: 16px;
+  }
+
+  .my_intro h1 {
+    font-size: 16px;
+  }
+  .my_intro p {
+    font-size: 16px;
+  }
+
+  .my_intro h3 {
+    font-size: 22px;
+  }
+
+  .about_me_title {
+    font-size: 40px;
   }
 }
 
 @media(max-width:392px){
+
+  .links {
+    width: 20%;
+  }
+
+  .my_intro h3 {
+    font-size: 25px;
+  }
+
+  .my_intro p {
+    font-size: 18px;
+  }
+
+  .my_intro h1 {
+    font-size: 18px;
+  }
+
   .my-portifolio{
-    font-size:20px ;
+    flex: 80%;
   }
 
   .hamburger-menu{
-    left:-63%;
+
     height: 40px;
     width: 40px;
-    top:-60%;
+    top:-50%;
   }
 
   .my_profile {
 
-    width: 150px;
-    height: 150px;
+    width: 180px;
+    height: 180px;
   }
 
   .off-screen-menu{
     max-width: 1450px;
   }
 
-  .intro,.about,.projects{
+  .my_intro {
     margin-top: 10%;
-    flex:none;
   }
 
   .text-1{
@@ -2051,10 +2204,72 @@
   .down-nav-link-1, .down-nav-link-2, .down-nav-link-3 {
     font-size: 8px;
   }
+
+
+}
+
+@media(max-width:360px){
+  .hamburger-menu {
+    height: 35px;
+    width: 35px;
+    top: -50%;
+  }
+
+  .image-1, .image-2, .image-3, .image-4 {
+    width: 250px;
+  }
+
+  .text-1, .text-2, .text-3, .text-4 {
+    width: 250px;
+  }
+
+  .text-1{
+    top: 400px;
+  }
+
+  .text-3 {
+    top: 1395px;
+  }
+
+  .project-card-1, .project-card-2, .project-card-3, .project-card-4 {
+    width: 250px;
+    border-radius: 0px;
+  }
+
+  .project-card-1:hover, .project-card-2:hover, .project-card-3:hover, .project-card-4:hover {
+
+    border-radius: 0px;
+  }
+
+  .project-1, .project-2, .project-3, .project-4 {
+    width: 200px;
+    
+  }
+
+  .project-card-1-part-2, .project-card-2-part-2, .project-card-3-part-2, .project-card-4-part-2 {
+    width: 200px;
+  }
+
+  #projects h1{
+    font-size: 20px;
+  }
 }
 
 @media(max-width:332px){
   .hamburger-menu{
     left:-66%;
   }
+
+  .info_about_me {
+    margin-left: 0%;
+    font-size: 4px;
+  }
+
+  .down-nav-link-1, .down-nav-link-2, .down-nav-link-3 {
+    font-size: 7px;
+    margin-left: 0%;
+    margin-top: 0%;
+  }
+
+
 }
